<resources>
    <string name="app_name">guess the word app</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="text_view">Text View</string>
    <string name="random_text">Random Text</string>
    <string name="enter_your_text">Enter Your Text</string>
    <string name="show">Show</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="textview">TextView</string>
    <string name="correct">Correct</string>
    <string name="click_on_continue">Click on Continue</string>
    <string name="continuee">Continue</string>
</resources>