<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:background="#8338ec"
    android:layout_height="300dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#57cc99"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/correct" />
</LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/click_on_continue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btConfirmDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="#f72585"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:textAlignment="center"
        android:text="@string/continuee" />

</LinearLayout>